--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
 	<div class="row">
-		<div class="col-xs-6 col-sm-3 col-md-3" id="filter">
+		<div class="col-xs-6 col-sm-3 col-md-2" id="filter">
 			<form class="form-horizontal">
 				<label class="h3 text-center">Want to find some easier classes?</label>
 				<div class="form-group top30">
-					<div class="col-sm-12">
-						<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-					</div>
+				<div class="col-sm-12 text-center" id="paramheader">
+					Text Parameter
 				</div>
-				<div class="form-group">
-					<label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-					</div>
+				<div class="col-sm-12">
+					<input type="email" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
 				</div>
+				<div class="col-sm-10 col-sm-push-1 text-center" id="paramnote">
+					<small>Search will only return results that include the text parameter</small>
+				</div>
+			</div>
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
 						<div class="checkbox">
