--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
 			<form class="form-horizontal">
 				<label class="h3 text-center">Want to find some easier classes?</label>
 				<div class="form-group top30">
-				<div class="col-sm-12 text-center" id="paramheader">
-					Text Parameter
+					<div class="col-sm-12 text-center" id="paramheader">
+						Text Parameter
+					</div>
+					<div class="col-sm-12">
+						<input type="email" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
+					</div>
+					<div class="col-sm-10 col-sm-push-1 text-center" id="paramnote">
+						<small>Search will only return results that include the text parameter</small>
+					</div>
 				</div>
-				<div class="col-sm-12">
-					<input type="email" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
+				<div class="form-group">
+					<div class="col-sm-12">
+						<button type="button" class="btn btn-lg active col-sm-12" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="technical">Technical</button>
+						<button type="button" class="btn btn-lg active col-sm-12 top15" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nontechnical">Non-Technical</button>
+						<button type="button" class="btn btn-lg active col-sm-12 top15" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="globalcore">Global Core</button>
+					</div>
 				</div>
-				<div class="col-sm-10 col-sm-push-1 text-center" id="paramnote">
-					<small>Search will only return results that include the text parameter</small>
-				</div>
-			</div>
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
 						<div class="checkbox">
@@ -41,7 +48,7 @@
 		<div class="col-xs-6 col-sm-6 col-md-6">
 			<table class="table table-bordered">
 				<thead>
-				<tr class="active">
+					<tr class="active">
 						<th>Firstname</th>
 						<th>Lastname</th>
 						<th>Email</th>
