Working on course level

--- a/index.html
+++ b/index.html
@@ -30,11 +30,44 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<div class="checkbox">
-							<label>
-								<input type="checkbox"> Remember me
-							</label>
+					<div class="col-sm-12">
+						<div class="col-sm-12 text-center filtersectionheader">
+							Course Level
+						</div>
+						<div class="row">
+							<div class="col-sm-5"> <!--Minimum level-->
+								<div class="checkbox col-sm-12">
+									<label><input type="checkbox"> Minimum</label>
+								</div>
+								<div class="dropdown col-sm-12">
+									<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
+										<span class="caret"></span>
+									</button>
+									<ul class="dropdown-menu">
+										<li><a href="#">HTML</a></li>
+										<li><a href="#">CSS</a></li>
+										<li><a href="#">JavaScript</a></li>
+									</ul>
+								</div>
+							</div>
+							<!--<div class="col-sm-2"> 	
+								&#x02581;
+							</div>-->
+							<div class="col-sm-5"> <!--Maximum level-->
+								<div class="checkbox col-sm-12">
+									<label><input type="checkbox"> Maximum</label>
+								</div>
+								<div class="dropdown col-sm-12">
+									<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
+										<span class="caret"></span>
+									</button>
+									<ul class="dropdown-menu">
+										<li><a href="#">HTML</a></li>
+										<li><a href="#">CSS</a></li>
+										<li><a href="#">JavaScript</a></li>
+									</ul>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
