--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 							Course Level
 						</div>
 						<div class="row">
-							<div class="col-sm-5"> <!--Minimum level-->
-								<div class="checkbox col-sm-12">
+							<div class="col-sm-5" id="randomred"> <!--Minimum level-->
+								<div class="checkbox center-inner">
 									<label><input type="checkbox"> Minimum</label>
 								</div>
-								<div class="dropdown col-sm-12">
+								<div class="dropdown center-inner">
 									<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
 										<span class="caret"></span>
 									</button>
@@ -50,14 +50,12 @@
 									</ul>
 								</div>
 							</div>
-							<!--<div class="col-sm-2"> 	
-								&#x02581;
-							</div>-->
-							<div class="col-sm-5"> <!--Maximum level-->
-								<div class="checkbox col-sm-12">
-									<label><input type="checkbox"> Maximum</label>
+							<div class="center-text col-sm-2">&#x02581;</div>
+							<div class="col-sm-5" id="randomred"> <!--Minimum level-->
+								<div class="checkbox center-inner">
+									<label><input type="checkbox"> Minimum</label>
 								</div>
-								<div class="dropdown col-sm-12">
+								<div class="dropdown center-inner">
 									<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
 										<span class="caret"></span>
 									</button>
