--- a/index.html
+++ b/index.html
@@ -36,42 +36,26 @@
 						</div>
 						<div class="row">
 							<div class="col-sm-5" id="randomred"> <!--Minimum level-->
-								<div class="checkbox center-inner">
-									<label><input type="checkbox"> Minimum</label>
+								<div class="row">
+									<div class="checkbox center-inner">
+										<label><input type="checkbox"> Minimum</label>
+									</div>
 								</div>
-								<div class="dropdown center-inner">
-									<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
-										<span class="caret"></span>
-									</button>
-									<ul class="dropdown-menu">
-										<li><a href="#">HTML</a></li>
-										<li><a href="#">CSS</a></li>
-										<li><a href="#">JavaScript</a></li>
-									</ul>
+								<div class="row">
+									<div class="dropdown center-inner">
+										<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
+											<span class="caret"></span>
+										</button>
+										<ul class="dropdown-menu">
+											<li><a href="#">HTML</a></li>
+											<li><a href="#">CSS</a></li>
+											<li><a href="#">JavaScript</a></li>
+										</ul>
+									</div>
 								</div>
 							</div>
 							<div class="center-text col-sm-2">&#x02581;</div>
-							<div class="col-sm-5" id="randomred"> <!--Minimum level-->
-								<div class="checkbox center-inner">
-									<label><input type="checkbox"> Minimum</label>
-								</div>
-								<div class="dropdown center-inner">
-									<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
-										<span class="caret"></span>
-									</button>
-									<ul class="dropdown-menu">
-										<li><a href="#">HTML</a></li>
-										<li><a href="#">CSS</a></li>
-										<li><a href="#">JavaScript</a></li>
-									</ul>
-								</div>
-							</div>
 						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-default">Sign in</button>
 					</div>
 				</div>
 			</form>
