Finished course level

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							Course Level
 						</div>
 						<div class="row">
-							<div class="col-sm-5" id="randomred"> <!--Minimum level-->
+							<div class="col-sm-5"> <!--Minimum level-->
 								<div class="row">
 									<div class="checkbox center-inner">
 										<label><input type="checkbox"> Minimum</label>
@@ -54,7 +54,26 @@
 									</div>
 								</div>
 							</div>
-							<div class="center-text col-sm-2">&#x02581;</div>
+							<div class="center-text col-sm-2 top45" id="shorthline"></div>
+							<div class="col-sm-5"> <!--Minimum level-->
+								<div class="row">
+									<div class="checkbox center-inner">
+										<label><input type="checkbox"> Maximum</label>
+									</div>
+								</div>
+								<div class="row">
+									<div class="dropdown center-inner">
+										<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
+											<span class="caret"></span>
+										</button>
+										<ul class="dropdown-menu">
+											<li><a href="#">HTML</a></li>
+											<li><a href="#">CSS</a></li>
+											<li><a href="#">JavaScript</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
