--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="col-sm-12">
+					<div class="col-sm-12 bottom30">
 						<button type="button" class="btn btn-lg active col-sm-12" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="technical">Technical</button>
 						<button type="button" class="btn btn-lg active col-sm-12 top15" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nontechnical">Non-Technical</button>
 						<button type="button" class="btn btn-lg active col-sm-12 top15" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="globalcore">Global Core</button>
@@ -73,6 +73,21 @@
 										</ul>
 									</div>
 								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-12">
+						<div class="row">
+							<div class="col-sm-12 text-center filtersectionheader top30">
+								Gold/Silver Nuggets
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-sm-12">
+							<button type="button" class="btn btn-lg active col-sm-4 col-sm-push-1" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget">Gold</button>
+							<button type="button" class="btn btn-lg active col-sm-4 col-sm-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget">Silv</button>
 							</div>
 						</div>
 					</div>
