Reduced spacing between box and text

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
 				</div>
 				<div class="form-group">
 					<div class="col-sm-12">
-						<div class="col-sm-12 text-center filtersectionheader">
-							Course Level
+						<div class="row">
+							<div class="col-sm-12 text-center filtersectionheader">
+								Course Level
+							</div>
 						</div>
 						<div class="row">
-							<div class="col-sm-5"> <!--Minimum level-->
+							<div class="col-sm-5" id="randompink"> <!--Minimum level-->
 								<div class="row">
 									<div class="checkbox center-inner">
-										<label><input type="checkbox"> Minimum</label>
+										<label><input type="checkbox"><small id="levelcheckboxtext">Minimum</small></label>
 									</div>
 								</div>
 								<div class="row">
@@ -55,10 +57,10 @@
 								</div>
 							</div>
 							<div class="center-text col-sm-2 top45" id="shorthline"></div>
-							<div class="col-sm-5"> <!--Minimum level-->
+							<div class="col-sm-5" id="randompink"> <!--Minimum level-->
 								<div class="row">
 									<div class="checkbox center-inner">
-										<label><input type="checkbox"> Maximum</label>
+										<label><input type="checkbox"><small id="levelcheckboxtext">Maximum</small></label>
 									</div>
 								</div>
 								<div class="row">
@@ -86,8 +88,8 @@
 						</div>
 						<div class="row">
 							<div class="col-sm-12">
-							<button type="button" class="btn btn-lg active col-sm-4 col-sm-push-1" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget">Gold</button>
-							<button type="button" class="btn btn-lg active col-sm-4 col-sm-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget">Silv</button>
+								<button type="button" class="btn btn-lg active col-sm-4 col-sm-push-1" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget">&#x2713;</button>
+								<button type="button" class="btn btn-lg active col-sm-4 col-sm-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget">&#10004;</button>
 							</div>
 						</div>
 					</div>
