Finished nuggets. Added assets

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="form-group">
 					<div class="col-sm-12 container">
 						<div class="row">
-							<div class="col-sm-12 text-center filtersectionheader">
+							<div class="col-sm-12 text-center filtersectionheader" id="courselevellabel">
 								Course Level
 							</div>
 						</div>
@@ -86,10 +86,10 @@
 								CULPA Nuggets
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-sm-12">
-								<button type="button" class="btn btn-lg active col-sm-4 col-sm-push-1" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget">&#x2713;</button>
-								<button type="button" class="btn btn-lg active col-sm-4 col-sm-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget">&#10004;</button>
+						<div class="row top10">
+							<div class="col-sm-12 container">
+								<button type="button" class="btn btn-lg active col-sm-5 col-sm-push-0" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/snug.png" id="nuggetimg"></button>
+								<button type="button" class="btn btn-lg active col-sm-5 col-sm-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/gnug.png" id="nuggetimg"></button>
 							</div>
 						</div>
 					</div>
