Finished A-range section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,25 @@
 						</div>
 					</div>
 				</div>
+				<div class="form-group">
+					<div class="col-sm-12">
+						<div class="row">
+							<div class="col-sm-12 text-center filtersectionheader top15">
+								A-Range
+							</div>
+						</div>
+						<div class="row top10">
+							<div class="col-sm-12">
+								<input type="range" id="myRange" value="90">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-sm-12">
+								<small>At least <b>57%</b> of students got As</small>
+							</div>
+						</div>
+					</div>
+				</div>
 			</form>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6">
