--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
 						</div>
 					</div>
 				</div>
+				<div class="form-group">
+					<div class="col-sm-12">
+					<button type="button" class="btn btn-lg active col-sm-12" style="color:white; font-size: small; font-face: 'HelveticaNeue" id="submitquery">Submit</button>
+					</div>
+				</div>
 			</form>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6">
