--- a/index.html
+++ b/index.html
@@ -115,48 +115,42 @@
 				</div>
 				<div class="form-group">
 					<div class="col-sm-12">
-					<button type="button" class="btn btn-lg active col-sm-12" style="color:white; font-size: small; font-face: 'HelveticaNeue" id="submitquery">Submit</button>
+						<button type="button" class="btn btn-lg active col-sm-12" style="color:white; font-size: small; font-face: 'HelveticaNeue" id="submitquery">Submit</button>
 					</div>
 				</div>
 			</form>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6">
-			<table class="table table-bordered" id="datatable">
-				<thead>
-					<tr class="active">
-						<th>#</th>
-						<th>Professor</th>
-						<th>Course ID</th>
-						<th>Course Name</th>
-						<th>A-Range</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>1</td>
-						<td>Paul S. Blaer</td>
-						<td>COMS W3133</td>
-						<td>Data Structures and Algorithms</td>
-						<td>43%</td>
-					</tr>
-					<tr>
-						<td>1</td>
-						<td>Paul S. Blaer</td>
-						<td>COMS W3133</td>
-						<td>Data Structures and Algorithms</td>
-						<td>43%</td>
-					</tr>
-					<tr>
-						<td>1</td>
-						<td>Paul S. Blaer</td>
-						<td>COMS W3133</td>
-						<td>Data Structures and Algorithms</td>
-						<td>43%</td>
-					</tr>
-				</tbody>
-			</table>
+		<div class="panel panel-default">
+    <div class="panel-heading">Panel heading</div>
+    <div class="panel-body">
+        <p>Some default panel content here.</p>
+    </div>
+
+    <div class="table-responsive">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Username</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Test</td>
+                    <td>Test</td>
+                    <td>Test</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 		</div>
 	</div>
+</div>
 
 
 
@@ -164,7 +158,7 @@
 
 
 
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
