--- a/index.html
+++ b/index.html
@@ -121,36 +121,45 @@
 			</form>
 		</div>
 		<div class="col-xs-6 col-sm-6 col-md-6">
-		<div class="panel panel-default">
-    <div class="panel-heading">Panel heading</div>
-    <div class="panel-body">
-        <p>Some default panel content here.</p>
-    </div>
-
-    <div class="table-responsive">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Username</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Test</td>
-                    <td>Test</td>
-                    <td>Test</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
+			<div class="panel panel-default">
+				<div class="panel-heading"><font color="grey"><b>Search Results</b></font></div>
+				<div class="panel-body">
+					<p>Only classes we have A-Range data for are included. Please submit your own 
+						A-Ranges to help increase our database!</p>
+					</div>
+					<div class="table-responsive">
+						<table class="table table-bordered" id="datatable">
+							<thead>
+								<tr class="active">
+									<th>#</th>
+									<th>Professor</th>
+									<th>Course ID</th>
+									<th>Course Name</th>
+									<th>A-Range</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-</div>
 
 
 
@@ -158,7 +167,7 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script src="js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
