--- a/index.html
+++ b/index.html
@@ -6,41 +6,42 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/custom.css">
 </head>
-<body>
-	<div class="row">
+<body style="background-color: #EDF2F8;">
+<div id="mainrow container">
+	<div class="row center-inner" id="randomred">
 		<div class="col-xs-2" id="filter">
 			<form class="form-horizontal">
 				<label class="h4 text-center">Want to find some easier classes?</label>
 				<div class="form-group top15">
-					<div class="col-sm-12 text-center" id="paramheader">
+					<div class="col-xs-12 text-center" id="paramheader">
 						Text Parameter
 					</div>
-					<div class="col-sm-12">
+					<div class="col-xs-12">
 						<input type="email" style="font-size: 8pt" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
 					</div>
-					<div class="col-sm-10 col-sm-push-1 text-center" id="paramnote">
-						<small>Search will only return results that include the text parameter</small>
+					<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
+						<xsall>Search will only return results that include the text parameter</xsall>
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="col-sm-12 bottom15">
-						<button type="button" class="btn btn-lg active col-sm-12" style="color:white; font-size: small; font-face: 'HelveticaNeue" id="technical">Technical</button>
-						<button type="button" class="btn btn-lg active col-sm-12 top15" style="color:white; font-size: small; font-face: 'HelveticaNeue" id="nontechnical">Non-Technical</button>
-						<button type="button" class="btn btn-lg active col-sm-12 top15" style="color:white; font-size: small; font-face: 'HelveticaNeue" id="globalcore">Global Core</button>
+					<div class="col-xs-12 bottom15">
+						<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="technical">Technical</button>
+						<button type="button" class="btn btn-lg active col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="nontechnical">Non-Technical</button>
+						<button type="button" class="btn btn-lg active col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="globalcore">Global Core</button>
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="col-sm-12 container">
+					<div class="col-xs-12 container">
 						<div class="row">
-							<div class="col-sm-12 text-center filtersectionheader" id="courselevellabel">
+							<div class="col-xs-12 text-center filtersectionheader" id="courselevellabel">
 								Course Level
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-sm-5 container"> <!--Minimum level-->
+							<div class="col-xs-5"> <!--Minimum level-->
 								<div class="row">
 									<div class="checkbox center-inner">
-										<label><input type="checkbox"><small id="levelcheckboxtext">Minimum</small></label>
+										<label><input type="checkbox"><xsall id="levelcheckboxtext">Min</xsall></label>
 									</div>
 								</div>
 								<div class="row">
@@ -56,11 +57,11 @@
 									</div>
 								</div>
 							</div>
-							<div class="center-text col-sm-2 top45" id="shorthline"></div>
-							<div class="col-sm-5"> <!--Minimum level-->
+							<div class="center-text col-xs-2 top45" id="shorthline"></div>
+							<div class="col-xs-5"> <!--Minimum level-->
 								<div class="row">
 									<div class="checkbox center-inner">
-										<label><input type="checkbox"><small id="levelcheckboxtext">Maximum</small></label>
+										<label><input type="checkbox"><xsall id="levelcheckboxtext">Max</xsall></label>
 									</div>
 								</div>
 								<div class="row">
@@ -80,56 +81,56 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="col-sm-12">
+					<div class="col-xs-12">
 						<div class="row">
-							<div class="col-sm-12 text-center filtersectionheader top15">
+							<div class="col-xs-12 text-center filtersectionheader top15">
 								CULPA Nuggets
 							</div>
 						</div>
 						<div class="row top10">
-							<div class="col-sm-12 container">
-								<button type="button" class="btn btn-lg active col-sm-5 col-sm-push-0" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/snug.png" id="nuggetimg"></button>
-								<button type="button" class="btn btn-lg active col-sm-5 col-sm-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/gnug.png" id="nuggetimg"></button>
+							<div class="col-xs-12 container">
+								<button type="button" class="btn btn-lg active col-xs-5 col-xs-push-0" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/snug.png" id="nuggetimg"></button>
+								<button type="button" class="btn btn-lg active col-xs-5 col-xs-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/gnug.png" id="nuggetimg"></button>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="col-sm-12">
+					<div class="col-xs-12">
 						<div class="row">
-							<div class="col-sm-12 text-center filtersectionheader top15">
+							<div class="col-xs-12 text-center filtersectionheader top15">
 								A-Range
 							</div>
 						</div>
 						<div class="row top10">
-							<div class="col-sm-12">
+							<div class="col-xs-12">
 								<input type="range" id="myRange" value="90">
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-sm-12">
-								<small>At least <b>57%</b> of students got As</small>
+							<div class="col-xs-12">
+								<xsall>At least <b>57%</b> of students got As</xsall>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="form-group">
-					<div class="col-sm-12">
-						<button type="button" class="btn btn-lg active col-sm-12" style="color:white; font-size: small; font-face: 'HelveticaNeue" id="submitquery">Submit</button>
+					<div class="col-xs-12">
+						<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Submit</button>
 					</div>
 				</div>
 			</form>
 		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6">
+		<div class="col-xs-6">
 			<div class="panel panel-default" id="tablepanel">
 				<div class="panel-heading">
 					<div class="row">
-						<div class="col-sm-4"><font color="grey"><b>Search Results</b></font></div>
-						<div class="col-sm-3 col-sm-push-5">
+						<div class="col-xs-4"><font color="grey"><b>Search Results</b></font></div>
+						<div class="col-xs-3 col-xs-push-5">
 							<button class="arrowbtn" id="leftarrow"><img src="assets/leftpage.png" style="height:20px;"></button>
 							<label class="left15">Page 4</label>
 							<button class="arrowbtn"><img src="assets/rightpage.png" style="height:20px;">
-						</div>
+							</div>
 						</div>
 					</div>
 					<div class="panel-body">
@@ -162,14 +163,30 @@
 									<td>Data Structures and Algorithms</td>
 									<td>41%</td>
 								</tr>
+								
 							</tbody>
 						</table>
 					</div>
 				</div>
 			</div>
+			<div class="col-xs-4 top45 container" id="rightcollumn">
+				<div class="row">
+					<div class="row text-center" style="font-size: medium; font-face: 'Arial">
+						You can search a specific course <b>here</b>
+					</div>
+				</div>
+				<div class="row text-center" style="color:#5D5D5D; font-size: small; font-face: 'HelveticNeue">
+					<div>Results will automatically appear in the query</div>
+				</div>
+				<div class="row">
+					<form class="form-horizontal">
+						<input type="email" style="font-size: 8pt" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
+					</form>
+				</div>
+			</div>
 		</div>
 	</div>
-
+</div>
 
 
 
