Making progress on div spacing. Third collumn now cuts off

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body style="background-color: #EDF2F8;">
 <div id="mainrow container">
-	<div class="row center-inner" id="randomred">
+	<div class="row center-inner" id="innermainrow">
+	<div>
 		<div class="col-xs-2" id="filter">
 			<form class="form-horizontal">
 				<label class="h4 text-center">Want to find some easier classes?</label>
@@ -121,6 +122,7 @@
 				</div>
 			</form>
 		</div>
+		</div>
 		<div class="col-xs-6">
 			<div class="panel panel-default" id="tablepanel">
 				<div class="panel-heading">
@@ -163,7 +165,134 @@
 									<td>Data Structures and Algorithms</td>
 									<td>41%</td>
 								</tr>
-								
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+								<tr>
+									<td>1</td>
+									<td>Paul S. Blaer</td>
+									<td>COMS W3134</td>
+									<td>Data Structures and Algorithms</td>
+									<td>41%</td>
+								</tr>
+
+
 							</tbody>
 						</table>
 					</div>
