Further improved spacing between divs

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							A-Ranges to help increase our database!
 						</div>
 						<div class="table-responsive">
-							<table class="table table-bordered" id="datatable">
+							<table class="table" id="datatable">
 								<thead>
 									<tr class="active">
 										<th>#</th>
@@ -241,8 +241,8 @@
 					</div>
 				</div>
 				<div>
-					<div class="col-xs-3 top45 container" id="rightcollumn">
-						<div class="col-xs-8 col-xs-push-2">
+					<div class="col-xs-5 top45 container" id="rightcollumn">
+						<div class="col-xs-10 col-xs-push-1">
 							<div class="row">
 								<div class="row text-center" style="font-size: medium; font-face: 'Arial">
 									You can search a specific course <b>here</b>
