Finished A-range submission

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 								Text Parameter
 							</div>
 							<div class="col-xs-12">
-								<input type="email" style="font-size: 8pt" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
+								<input type="email" style="font-size: 8.5pt" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
 							</div>
 							<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
 								<xsall>Search will only return results that include the text parameter</xsall>
@@ -266,8 +266,46 @@
 									<div class="row center-inner">
 										<a style="color:#8224D5;" href="https://www.nsa.gov/" target="_blank"><u><small>Where do I find my A-Ranges?</small></u></a>
 									</div>
+									<div>
+										<form class="form-horizontal">
+											<div class="form-group top30">
+												<div class="col-xs-12 col-xs-push-1" style="font-size: 13pt" id="paramheader">
+													Text Parameter
+												</div>
+												<div class="col-xs-8 col-xs-push-1">
+													<input type="email" style="font-size: 11pt" class="form-control" id="inputEmail3" placeholder="e.g. COMS W1006">
+												</div>
+											</div>
+											<div class="form-group top15">
+												<div class="col-xs-12 col-xs-push-1" style="font-size: 13pt" id="paramheader">
+													Course Name
+												</div>
+												<div class="col-xs-10 col-xs-push-1">
+													<input type="email" style="font-size: 11pt" class="form-control" id="inputEmail3" placeholder="e.g. Princples of Economics">
+												</div>
+											</div>
+											<div class="form-group top15">
+												<div class="col-xs-12 col-xs-push-1" style="font-size: 13pt" id="paramheader">
+													Professor Name
+												</div>
+												<div class="col-xs-10 col-xs-push-1">
+													<input type="email" style="font-size: 11pt" class="form-control" id="inputEmail3" placeholder="e.g. Musatti">
+												</div>
+											</div>
+											<div class="form-group top15">
+												<div class="col-xs-12 col-xs-push-1" style="font-size: 13pt" id="paramheader">
+													A-Range (%)
+												</div>
+												<div class="col-xs-5 col-xs-push-1 bottom15">
+													<input type="email" style="font-size: 11pt" class="form-control" id="inputEmail3" placeholder="e.g. 43">
+												</div>
+												<div class="col-xs-4 col-xs-push-1 bottom15">
+												<button type="button" class="btn btn-lg active" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitdata">Submit</button>
+												</div>
+											</div>
+										</form>
+									</div>
 								</div>
-
 							</div>
 						</div>
 					</div>
