Added submission error message

--- a/index.html
+++ b/index.html
@@ -266,9 +266,12 @@
 									<div class="row center-inner">
 										<a style="color:#8224D5;" href="https://www.nsa.gov/" target="_blank"><u><small>Where do I find my A-Ranges?</small></u></a>
 									</div>
+									<div class="row center-inner top10" style="color:#D0011B; font-size: 8pt;">
+										You can put some kind of submission error here
+									</div>
 									<div>
 										<form class="form-horizontal">
-											<div class="form-group top30">
+											<div class="form-group top10">
 												<div class="col-xs-12 col-xs-push-1" style="font-size: 13pt" id="paramheader">
 													Text Parameter
 												</div>
