Right floated page chooser

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<div class="panel-heading">
 						<div class="row">
 							<div class="col-xs-4"><font color="grey"><b>Search Results</b></font></div>
-							<div class="col-xs-3 col-xs-push-5">
+							<div class="right30 pull-right">
 								<button class="arrowbtn" id="leftarrow"><img src="assets/leftpage.png" style="height:20px;"></button>
 								<label class="left15">Page 4</label>
 								<button class="arrowbtn"><img src="assets/rightpage.png" style="height:20px;">
