Added error message to data table

--- a/index.html
+++ b/index.html
@@ -136,8 +136,11 @@
 							</div>
 						</div>
 						<div class="panel-body">
-							Only classes we have A-Range data for are included. Please submit your own 
-							A-Ranges to help increase our database!
+							<div>
+								Only classes we have A-Range data for are included. Please submit your own 
+								A-Ranges to help increase our database!
+							</div>
+							<div class="text-center" style="color:#FFD438; font-size: small; font-face: 'HelveticNeue"><b>Some kind of error goes here</b></div>
 						</div>
 						<div class="table-responsive">
 							<table class="table" id="datatable">
@@ -303,7 +306,7 @@
 													<input type="email" style="font-size: 11pt" class="form-control" id="inputEmail3" placeholder="e.g. 43">
 												</div>
 												<div class="col-xs-4 col-xs-push-1 bottom15">
-												<button type="button" class="btn btn-lg active" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitdata">Submit</button>
+													<button type="button" class="btn btn-lg active" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitdata">Submit</button>
 												</div>
 											</div>
 										</form>
