Created Javascript file

--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-	<title>title</title>
+	<title>EZACU</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body style="background-color: #EDF2F8;">
-<div id="mainheader">
-	<div class="row">
-		<div class="col-xs-7 col-xs-push-1 top30" style="font-size: 34pt; font-face: 'HelveticaNeue">
-			<b>Welcome to EZACU.com</b>
+	<div id="mainheader">
+		<div class="row">
+			<div class="col-xs-7 col-xs-push-1 top30" style="font-size: 34pt; font-face: 'HelveticaNeue">
+				<b>Welcome to EZACU.com</b>
+			</div>
+			<div class="col-xs-3 top30 text-center" style="font-size: 12pt; font-face: 'HelveticaNeue">
+				<i><u>Definition of <b>A-Range: </b></u><p>The percentage of students enrolled in a class who received an A- or better</p></i>
+			</div>
 		</div>
-		<div class="col-xs-3 top30 text-center" style="font-size: 12pt; font-face: 'HelveticaNeue">
-			<i><u>Definition of <b>A-Range: </b></u><p>The percentage of students enrolled in a class who received an A- or better</p></i>
+		<div class="row">
+			<div class="col-xs-10 col-xs-push-1 left10 bottom30" id="mainsubtitle" style="font-size: 16pt; font-face: 'HelveticaNeue">
+				<b>The database of A-Ranges at Columbia University</b>
+			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-10 col-xs-push-1 left10 bottom30" id="mainsubtitle" style="font-size: 16pt; font-face: 'HelveticaNeue">
-			<b>The database of A-Ranges at Columbia University</b>
-		</div>
-	</div>
 	</div>
 </div>
 <div id="mainrow container">
@@ -338,8 +339,10 @@
 
 
 
-
-
+<script src="js/custom.js" type="text/javascript">
+</script>
+<script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
+<script>initDatabase();</script>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script>
