--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							Text Parameter
 						</div>
 						<div class="col-xs-12">
-							<input type="email" style="font-size: 8.5pt" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
+							<input type="email" style="font-size: 8.5pt" class="form-control" id="textparam" placeholder="e.g. “ECON” or “PHYS”">
 						</div>
 						<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
 							<xsall>Search will only return results that include the text parameter</xsall>
@@ -273,7 +273,7 @@
 						</div>
 						<div class="row top7">
 							<form class="form-horizontal">
-								<input type="email" style="font-size: 10pt" class="form-control" id="inputEmail3" placeholder="Search...">
+								<input type="email" style="font-size: 10pt" class="form-control" id="searchbar" placeholder="Search...">
 							</form>
 						</div>
 						<div class="row top60">
@@ -293,10 +293,10 @@
 									<form class="form-horizontal">
 										<div class="form-group top10">
 											<div class="col-xs-12 col-xs-push-1" style="font-size: 13pt" id="paramheader">
-												Text Parameter
+												Course ID
 											</div>
 											<div class="col-xs-8 col-xs-push-1">
-												<input type="email" style="font-size: 11pt" class="form-control" id="inputEmail3" placeholder="e.g. COMS W1006">
+												<input type="email" style="font-size: 11pt" class="form-control" id="course-id" placeholder="e.g. COMS W1006">
 											</div>
 										</div>
 										<div class="form-group top15">
@@ -304,7 +304,7 @@
 												Course Name
 											</div>
 											<div class="col-xs-10 col-xs-push-1">
-												<input type="email" style="font-size: 11pt" class="form-control" id="inputEmail3" placeholder="e.g. Princples of Economics">
+												<input type="email" style="font-size: 11pt" class="form-control" id="course-name" placeholder="e.g. Princples of Economics">
 											</div>
 										</div>
 										<div class="form-group top15">
@@ -312,7 +312,7 @@
 												Professor Name
 											</div>
 											<div class="col-xs-10 col-xs-push-1">
-												<input type="email" style="font-size: 11pt" class="form-control" id="inputEmail3" placeholder="e.g. Musatti">
+												<input type="email" style="font-size: 11pt" class="form-control" id="prof-name" placeholder="e.g. Musatti">
 											</div>
 										</div>
 										<div class="form-group top15">
@@ -320,10 +320,10 @@
 												A-Range (%)
 											</div>
 											<div class="col-xs-5 col-xs-push-1 bottom15">
-												<input type="email" style="font-size: 11pt" class="form-control" id="inputEmail3" placeholder="e.g. 43">
+												<input type="email" style="font-size: 11pt" class="form-control" id="a-range" placeholder="e.g. 43">
 											</div>
 											<div class="col-xs-4 col-xs-push-1 bottom15">
-												<button type="button" class="btn btn-lg active" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitdata">Submit</button>
+												<button type="button" onclick="submitData();" class="btn btn-lg active" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitdata">Submit</button>
 											</div>
 										</div>
 									</form>
