--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							Text Parameter
 						</div>
 						<div class="col-xs-12">
-							<input type="email" style="font-size: 8.5pt" class="form-control" id="textparam" placeholder="e.g. “ECON” or “PHYS”">
+							<input type="text" style="font-size: 8.5pt" class="form-control" id="textparam" placeholder="e.g. “ECON” or “PHYS”">
 						</div>
 						<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
 							<xsall>Search will only return results that include the text parameter</xsall>
@@ -134,7 +134,7 @@
 					</div>
 					<div class="form-group">
 						<div class="col-xs-12">
-							<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Submit</button>
+							<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Search</button>
 						</div>
 					</div>
 				</form>
@@ -155,7 +155,7 @@
 					<div class="panel-body">
 						<div>
 							Only classes we have A-Range data for are included. Please submit your own 
-							A-Ranges to help increase our database!
+							A-Ranges to help increase our database! <small><i>Note:</i> There may be duplicates since course IDs change over time.</small>
 						</div>
 						<div class="text-center" style="color:#FFD438; font-size: small; font-face: 'HelveticNeue"><b>Some kind of error goes here</b></div>
 					</div>
@@ -272,8 +272,8 @@
 							<div>Results will automatically appear in the query</div>
 						</div>
 						<div class="row top7">
-							<form class="form-horizontal">
-								<input type="email" style="font-size: 10pt" class="form-control" id="searchbar" placeholder="Search...">
+							<form class="form-horizontal" id="searchForm">
+								<input type="text" onkeydown="searchChange()" style="font-size: 10pt" class="form-control" id="searchbar" placeholder="Search...">
 							</form>
 						</div>
 						<div class="row top60">
@@ -296,7 +296,7 @@
 												Course ID
 											</div>
 											<div class="col-xs-8 col-xs-push-1">
-												<input type="email" style="font-size: 11pt" class="form-control" id="course-id" placeholder="e.g. COMS W1006">
+												<input type="text" style="font-size: 11pt" class="form-control" id="course-id" placeholder="e.g. COMS W1006">
 											</div>
 										</div>
 										<div class="form-group top15">
@@ -304,7 +304,7 @@
 												Course Name
 											</div>
 											<div class="col-xs-10 col-xs-push-1">
-												<input type="email" style="font-size: 11pt" class="form-control" id="course-name" placeholder="e.g. Princples of Economics">
+												<input type="text" style="font-size: 11pt" class="form-control" id="course-name" placeholder="e.g. Princples of Economics">
 											</div>
 										</div>
 										<div class="form-group top15">
@@ -312,7 +312,7 @@
 												Professor Name
 											</div>
 											<div class="col-xs-10 col-xs-push-1">
-												<input type="email" style="font-size: 11pt" class="form-control" id="prof-name" placeholder="e.g. Musatti">
+												<input type="text" style="font-size: 11pt" class="form-control" id="prof-name" placeholder="e.g. Musatti">
 											</div>
 										</div>
 										<div class="form-group top15">
@@ -320,7 +320,7 @@
 												A-Range (%)
 											</div>
 											<div class="col-xs-5 col-xs-push-1 bottom15">
-												<input type="email" style="font-size: 11pt" class="form-control" id="a-range" placeholder="e.g. 43">
+												<input type="text" style="font-size: 11pt" class="form-control" id="a-range" placeholder="e.g. 43">
 											</div>
 											<div class="col-xs-4 col-xs-push-1 bottom15">
 												<button type="button" onclick="submitData();" class="btn btn-lg active" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitdata">Submit</button>
