Added functionality to warning label above table

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							Only classes we have A-Range data for are included. Please submit your own 
 							A-Ranges to help increase our database! <small><i>Note:</i> There may be duplicates since course IDs change over time.</small>
 						</div>
-						<div class="text-center" style="color:#FFD438; font-size: small; font-face: 'HelveticNeue"><b>Some kind of error goes here</b></div>
+						<div class="text-center" id="tableerror" style="color:#FFD438; font-size: small; font-face: 'HelveticNeue"></div>
 					</div>
 					<div class="table-responsive">
 						<table class="table" id="datatable">
