--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					</div>
 					<div class="form-group">
 						<div class="col-xs-12">
-							<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Search</button>
+							<button type="button" onclick="filter();" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Search</button>
 						</div>
 					</div>
 				</form>
@@ -255,6 +255,8 @@
 
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="js/bigdata.js" type="text/javascript">
+</script>
 <script src="js/custom.js" type="text/javascript">
 </script>
 <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
