ARange floor part of filter works

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
 							</div>
 							<div class="row top10">
 								<div class="col-xs-12">
-									<input type="range" id="myRange" value="90">
+									<input type="range" id="myRange" onchange="sliderUpdate()" value="0">
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-xs-12">
-									<xsall>At least <b>57%</b> of students got As</xsall>
+								<div class="col-xs-12" id="sliderSubLabel">
+									<xsall>At least <b>0%</b> of students got As</xsall>
 								</div>
 							</div>
 						</div>
