Dropdowns work aestheticly only. Need to add functionality

--- a/index.html
+++ b/index.html
@@ -64,13 +64,16 @@
 									</div>
 									<div class="row">
 										<div class="dropdown center-inner">
-											<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
+											<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" id="minCover">1000
 												<span class="caret"></span>
 											</button>
 											<ul class="dropdown-menu">
-												<li><a href="#">HTML</a></li>
-												<li><a href="#">CSS</a></li>
-												<li><a href="#">JavaScript</a></li>
+												<li><a href="#" id="onekmin" class="dropBtn">1000</a></li>
+												<li><a href="#" id="twokmin" class="dropBtn">2000</a></li>
+												<li><a href="#" id="threekmin" class="dropBtn">3000</a></li>
+												<li><a href="#" id="fourkmin" class="dropBtn">4000</a></li>
+												<li><a href="#" id="fivekmin" class="dropBtn">5000</a></li>
+												<li><a href="#" id="sixkmin" class="dropBtn">6000</a></li>
 											</ul>
 										</div>
 									</div>
@@ -84,13 +87,16 @@
 									</div>
 									<div class="row">
 										<div class="dropdown center-inner">
-											<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
+											<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" id="maxCover">4000
 												<span class="caret"></span>
 											</button>
 											<ul class="dropdown-menu">
-												<li><a href="#">HTML</a></li>
-												<li><a href="#">CSS</a></li>
-												<li><a href="#">JavaScript</a></li>
+												<li><a href="#" id="onekmax" class="dropBtn">1000</a></li>
+												<li><a href="#" id="twokmax" class="dropBtn">2000</a></li>
+												<li><a href="#" id="threekmax" class="dropBtn">3000</a></li>
+												<li><a href="#" id="fourkmax" class="dropBtn">4000</a></li>
+												<li><a href="#" id="fivekmax" class="dropBtn">5000</a></li>
+												<li><a href="#" id="sixkmax" class="dropBtn">6000</a></li>
 											</ul>
 										</div>
 									</div>
