--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<div class="col-xs-5"> <!--Minimum level-->
 									<div class="row">
 										<div class="checkbox center-inner">
-											<label><input type="checkbox"><xsall id="levelcheckboxtext">Min</xsall></label>
+											<label><input type="checkbox" id="levelcheckboxmin"><xsall>Min</xsall></label>
 										</div>
 									</div>
 									<div class="row">
@@ -82,7 +82,7 @@
 								<div class="col-xs-5"> <!--Minimum level-->
 									<div class="row">
 										<div class="checkbox center-inner">
-											<label><input type="checkbox"><xsall id="levelcheckboxtext">Max</xsall></label>
+											<label><input type="checkbox" id="levelcheckboxmax"><xsall>Max</xsall></label>
 										</div>
 									</div>
 									<div class="row">
