--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 					</div>
 					<div class="form-group">
 						<div class="col-xs-12 bottom15">
-							<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="technical">Technical<img class="bottom10" src="assets/checkmark.png" style="height:20px;" id="darkcheckmark"></button>
-							<button type="button" class="btn btn-lg active col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="nontechnical">Non-Technical</button>
-							<button type="button" class="btn btn-lg active col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="globalcore">Global Core</button>
+							<button type="button" class="btn btn-lg col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="technical">Technical</button>
+							<button type="button" class="btn btn-lg col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="nontechnical">Non-Tech</button>
+							<button type="button" class="btn btn-lg col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="globalcore">Global Core</button>
 						</div>
 					</div>
 					<div class="form-group">
@@ -113,8 +113,8 @@
 							</div>
 							<div class="row top10">
 								<div class="col-xs-12 container">
-									<button type="button" class="btn btn-lg active col-xs-5 col-xs-push-0" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/snug.png" id="nuggetimg"></button>
-									<button type="button" class="btn btn-lg active col-xs-5 col-xs-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/gnug.png" id="nuggetimg"><img class="bottom10" src="assets/checkmark.png" style="height:20px;" id="lightcheckmark"></button>
+									<button type="button" class="btn btn-lg col-xs-5 col-xs-push-0" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="silvernuggetbtn"><img class="bottom10" src="assets/snug.png" id="silvernuggetimg"></button>
+									<button type="button" class="btn btn-lg col-xs-5 col-xs-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="goldnuggetbtn"><img class="bottom10" src="assets/gnug.png" id="goldnuggetimg"></button>
 								</div>
 							</div>
 						</div>
