--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					</div>
 					<div class="form-group">
 						<div class="col-xs-12">
-							<button type="button" onclick="filter();" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Search</button>
+							<button type="button" onclick="filter();" class="btn btn-lg col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Search</button>
 						</div>
 					</div>
 				</form>
@@ -152,9 +152,9 @@
 					<div class="row">
 						<div class="col-xs-4"><font color="grey"><b>Search Results</b></font></div>
 						<div class="right30 pull-right">
-							<button class="arrowbtn" id="leftarrow"><img src="assets/leftpage.png" style="height:20px;"></button>
-							<label class="left15">Page 4</label>
-							<button class="arrowbtn"><img src="assets/rightpage.png" style="height:20px;">
+							<button class="arrowbtn" id="leftarrow" onclick="lastPage()"><img src="assets/leftpagedis.png" style="height:20px;"></button>
+							<label class="left15" id="pagenum">Page 1</label>
+							<button class="arrowbtn" id="rightarrow" onclick="nextPage()"><img src="assets/rightpagedis.png" style="height:20px;"></button>
 							</div>
 						</div>
 					</div>
