Finished front-end side of submission box

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 								<div class="row center-inner">
 									<a style="color:#8224D5;" href="https://www.nsa.gov/" target="_blank"><u><small>Where do I find my A-Ranges?</small></u></a>
 								</div>
-								<div class="row center-inner top10" style="color:#D0011B; font-size: 8pt;">
-									You can put some kind of submission error here
+								<div id="submissionerror" class="row center-inner top10" style="color:#D0011B; font-size: 8pt;">
+								
 								</div>
 								<div>
 									<form class="form-horizontal">
@@ -245,7 +245,7 @@
 												<input type="text" style="font-size: 11pt" class="form-control" id="a-range" placeholder="e.g. 43">
 											</div>
 											<div class="col-xs-4 col-xs-push-1 bottom15">
-												<button type="button" onclick="submitData();" class="btn btn-lg active" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitdata">Submit</button>
+												<button type="button" onclick="submitButtonPressed();" class="btn btn-lg" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitdata">Submit</button>
 											</div>
 										</div>
 									</form>
