--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 								
 								</div>
 								<div>
-									<form class="form-horizontal">
+									<form class="form-horizontal" id="submitdataform">
 										<div class="form-group top10">
 											<div class="col-xs-12 col-xs-push-1" style="font-size: 13pt" id="paramheader">
 												Course ID
