Added email signature below arange submission box

--- a/index.html
+++ b/index.html
@@ -251,6 +251,9 @@
 									</form>
 								</div>
 							</div>
+							<div id="emailprompt" class="text-center row"><i>~ I made this website. If you would like</i></div>
+							<div id="emailprompt" class="text-center row"><i>to contact me, please email me at</i></div>
+							<div id="emailprompt" class="text-center row top5"><a style="color:black;" href="mailto:lol2107@columbia.edu"><b>lol2107@columbia.edu</b></a></div>
 						</div>
 					</div>
 				</div>
