--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,7 @@
 									</div>
 								</div>
 								<div class="row center-inner">
-									<a style="color:#8224D5;" href="https://www.nsa.gov/" target="_blank"><u><small>Where do I find my A-Ranges?</small></u></a>
+									<a style="color:#8224D5;" href="./instructions.html" target="_blank"><u><small>Where do I find my A-Ranges?</small></u></a>
 								</div>
 								<div id="submissionerror" class="row center-inner top10" style="color:#D0011B; font-size: 8pt;">
 								
@@ -253,7 +253,7 @@
 							</div>
 							<div id="emailprompt" class="text-center row"><i>~ I made this website. If you would like</i></div>
 							<div id="emailprompt" class="text-center row"><i>to contact me, please email me at</i></div>
-							<div id="emailprompt" class="text-center row top5"><a style="color:black;" href="mailto:lol2107@columbia.edu"><b>lol2107@columbia.edu</b></a></div>
+							<div id="emailprompt" class="text-center row top5"><a style="color:black;" href="mailto:contact.ezacu@gmail.com"><b>contact.ezacu@gmail.com</b></a></div>
 						</div>
 					</div>
 				</div>
@@ -266,9 +266,10 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="js/bigdata.js" type="text/javascript">
 </script>
+
+<script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
 <script src="js/custom.js" type="text/javascript">
 </script>
-<script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
 <script>initDatabase();</script>
 
 <script src="js/bootstrap.min.js"></script>
