--- a/public/index.html
+++ b/public/index.html
@@ -226,7 +226,7 @@
 												Course Name
 											</div>
 											<div class="col-xs-10 col-xs-push-1">
-												<input type="text" style="font-size: 11pt" class="form-control" id="course-name" placeholder="e.g. Princples of Economics">
+												<input type="text" style="font-size: 11pt" class="form-control" id="course-name" placeholder="e.g. Principles of Economics">
 											</div>
 										</div>
 										<div class="form-group top15">
