--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
 			<div class="panel panel-default" id="tablepanel">
 				<div class="panel-heading">
 					<div class="row">
-						<div class="col-xs-4"><font color="grey"><b>Search Results</b></font></div>
+						<div class="col-xs-4 top4" id="searchres"><font color="grey"><b>Search Results</b></font></div>
 						<div class="right30 pull-right">
 							<button class="arrowbtn" id="leftarrow" onclick="lastPage()"><img src="assets/leftpagedis.png" style="height:20px;"></button>
 							<label class="left15" id="pagenum">Page 1</label>
@@ -234,7 +234,7 @@
 												Professor Name
 											</div>
 											<div class="col-xs-10 col-xs-push-1">
-												<input type="text" style="font-size: 11pt" class="form-control" id="prof-name" placeholder="e.g. Musatti">
+												<input type="text" style="font-size: 11pt" class="form-control" id="prof-name" placeholder="e.g. Sunil Gulati">
 											</div>
 										</div>
 										<div class="form-group top15">
