Added patch notes

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body style="background-color: #EDF2F8;">
+<div class="row"><!--Delete this patch-notes later-->
+	<div class="col-xs-12 col-xs-push-1 top15"><p><i>Patch Notes (1/7/17):</i> Fixed a bug preventing people from submitting A-Ranges. Added plus-minus to search results with more than one entry.</p></div>
+</div>
 	<div id="mainheader">
 		<div class="row">
 			<div class="col-xs-7 col-xs-push-1 top30" style="font-size: 34pt; font-face: 'HelveticaNeue">
