firebase now keeps track of people's searches

--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
 						</div>
 						<div class="row top7">
 							<form class="form-horizontal" id="searchForm">
-								<input type="text" oninput="searchChange()" style="font-size: 10pt" class="form-control" id="searchbar" placeholder="Search...">
+								<input type="text" onkeydown="searchKeyDown()" oninput="searchChange()" style="font-size: 10pt" class="form-control" id="searchbar" placeholder="Search...">
 							</form>
 						</div>
 						<div class="row top60">
