added enter functionality to textparam

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 							Text Parameter
 						</div>
 						<div class="col-xs-12">
-							<input type="text" style="font-size: 8.5pt" class="form-control" id="textparam" placeholder="e.g. “ECON” or “PHYS”">
+							<input type="text" style="font-size: 8.5pt" class="form-control" id="textparam" placeholder="e.g. “ECON” or “PHYS”" onkeypress="checkEnter(event)">
 						</div>
 						<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
 							<xsall>Search will only return results that include the text parameter</xsall>
