Header row now stays centered

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body style="background-color: #EDF2F8;">
-	<div id="mainheader">
+	<div id="mainheader" class="center-inner">
 		<div class="row">
 			<div class="col-xs-7 col-xs-push-1 top30" style="font-size: 34pt; font-face: 'HelveticaNeue">
 				<b>Welcome to EZACU.com</b>
