Added way to send messages to users. Probably a bad idea.

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,16 @@
 		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=1007010152777162";
 		fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
+	<div class="row"><!--Delete this patch-notes later-->
+		<div class="text-center top15" id="message" style="color: #BD0FE1;"><b>Hi</b></div>
+	</div>
 	<div id="mainheader" class="center-inner">
 		<div class="row left30">
-		<div class="fb-share-button col-xs-1 text-center top60" data-href="https://www.ezacu.com/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.ezacu.com%2F&amp;src=sdkpreparse">Share</a></div>
+			<div class="col-xs-1 text-center" id="fbbtn">
+				<b>Please Share!</b>
+				<div class="fb-share-button " data-href="https://www.ezacu.com/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.ezacu.com%2F&amp;src=sdkpreparse">Share</a>
+				</div>
+			</div>
 			<div class="col-xs-7 col-xs-push-0 top30" style="font-size: 34pt; font-face: 'HelveticaNeue">
 				<b>Welcome to EZACU.com</b>
 			</div>
