Added a picture of a transcript to instructions.html

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 		fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 	<div class="row"><!--Delete this patch-notes later-->
-		<div class="text-center top15" id="message" style="color: #BD0FE1;"><b>Hi</b></div>
+		<div class="text-center top15" id="message" style="color: #BD0FE1;"><b></b></div>
 	</div>
 	<div id="mainheader" class="center-inner">
 		<div class="row left30">
