--- a/public/instructions.html
+++ b/public/instructions.html
@@ -32,7 +32,8 @@
 						<p>After completing your order, you should recieve two emails in your inbox within the next 2-10 minutes. The latter should contain your transcript.</p>
 					</li>
 					<li>
-					<p>In your transcript, there lists every class you have taken each semester thus far. In the right most collumn, you should see the A-Range for each class you have taken. <b>Students in SEAS do not have access to this information.</b></p>
+					<p>In your transcript, there lists every class you have taken each semester thus far. In the right most collumn, you should see the A-Range for each class you have taken. <b>Students in SEAS and Barnard do not have access to this information.</b></p>
+					<img src="assets/transcript-demo.jpg" alt="Transcript Picture" style="height:600px;">
 					</li>
 				</ol>
 			</div>
