Firebase now records the text searches for the filter

--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@
 							<div id="submission">
 								<div class="row">
 									<div class="text-center top15" style="font-size: 15pt; font-face: 'HelveticNeue">
-										Submit your A-ranges
+										<b>Submit your A-ranges</b>
 									</div>
 								</div>
 								<div class="row center-inner">
