--- a/public/instructions.html
+++ b/public/instructions.html
@@ -29,7 +29,7 @@
 						<p>Follow through with the following prompts like a typical online purchase. Assuming you don't choose any extra features (like tracking) this won't cost you a dime, although you will be asked to provide payment information for some reason.</p>
 					</li>
 					<li>
-						<p>After completing your order, you should recieve two emails in your inbox within the next 2-10 minutes. The latter should contain your transcript.</p>
+						<p>After completing your order, you should recieve two emails in your inbox, which could take anywhere between 3 minutes to half a day. Usually like 5-10 minutes though. The latter should contain your transcript.</p>
 					</li>
 					<li>
 					<p>In your transcript, there lists every class you have taken each semester thus far. In the right most collumn, you should see the A-Range for each class you have taken. <b>Students in SEAS and Barnard do not have access to this information.</b></p>
